crates/rustic-ui-headless/tests/snapshots/layout_primitives__headless_image_list_breakpoints.snap
---
source: crates/rustic-ui-headless/tests/layout_primitives.rs
expression: snapshot
---
{
  "attributes": {
    "class": "rustic-image-list",
    "data_breakpoint@720": "sm",
    "data_variant": "masonry",
    "id": "gallery",
    "role": "presentation"
  },
  "evaluations": [
    {
      "breakpoint": "base",
      "columns": 2,
      "gap": "12px",
      "min_width": 0,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    },
    {
      "breakpoint": "sm",
      "columns": 3,
      "gap": "12px",
      "min_width": 600,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    },
    {
      "breakpoint": "md",
      "columns": 3,
      "gap": "12px",
      "min_width": 900,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    },
    {
      "breakpoint": "lg",
      "columns": 5,
      "gap": "12px",
      "min_width": 1200,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    },
    {
      "breakpoint": "xl",
      "columns": 5,
      "gap": "12px",
      "min_width": 1536,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    },
    {
      "breakpoint": "xxl",
      "columns": 5,
      "gap": "12px",
      "min_width": 1800,
      "role": "presentation",
      "row_height": 240,
      "variant": "masonry"
    }
  ]
}
